--- a/style.css
+++ b/style.css
@@ -1,14 +1,5 @@
-header {
+.full-l {
     margin-top: 20px;
-    padding: 20px;
-    background: #777;
-    color: black;
-    background-color: #ebebeb;
-    width: 940px;
-    text-align: center;
-}
-nav {
-    margin-top: 10px;
     margin-bottom: 20px;
     padding: 20px;
     background: #777;
@@ -17,6 +8,18 @@ nav {
     width: 940px;
     text-align: center;
 }
+.footer {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    background: #777;
+    color: black;
+    background-color: #ebebeb;
+    width: 940px;
+    text-align: center;
+    clear: both;
+}
+}
 body {
     background-color: #777;
     font-family: Arial, Helvetica, sans-serif;
@@ -24,13 +27,16 @@ body {
     width: 960px;
     background: #777;
     color: #777;
+    margin-left: 200px;
 }
 
 section {
     float: left;
     width: 495px;
-    height: 200px;
+    height: 250px;
     background: #ebebeb;
+    margin-bottom: 20px;
+    text-align: center;
 
 }
 aside {
@@ -38,4 +44,19 @@ aside {
     float: left;
     margin-left: 20px;
     width: 440px;
+    height: 250px;
+    text-align: center;
+}
+
+article {
+    background: #777;
+    width: 95%;
+    height: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
+    margin-top: 115px;
+    margin-bottom: 10px;
+    text-align: center;
+
 }
