--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .full-l {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 20px;
     background: #777;
-    color: black;
-    background-color: #ebebeb;
-    width: 940px;
+    background: #ebebeb;
+    width: 960px;
+    height: 50px;
     text-align: center;
 }
 .footer {
@@ -13,21 +13,20 @@
     margin-bottom: 20px;
     padding: 20px;
     background: #777;
-    color: black;
-    background-color: #ebebeb;
-    width: 940px;
+    background: #ebebeb;
+    width: 960px;
+    height: 50px;
     text-align: center;
     clear: both;
 }
-}
 body {
-    background-color: #777;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     width: 960px;
     background: #777;
     color: #777;
     margin-left: 200px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background: '#777'
 }
 
 section {
@@ -37,26 +36,38 @@ section {
     background: #ebebeb;
     margin-bottom: 20px;
     text-align: center;
+    margin-top: 15px;
 
 }
 aside {
     background: #ebebeb;
     float: left;
-    margin-left: 20px;
-    width: 440px;
+    margin-left: 15px;
+    margin-top: 15px;
+    width: 450px;
     height: 250px;
     text-align: center;
 }
 
 article {
+    color: #ebebeb;
     background: #777;
-    width: 95%;
+    width: 455px;
     height: 100px;
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 0px;
     padding: 10px;
-    margin-top: 115px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 5px;
     text-align: center;
+  
 
+}
+#h1 {
+    color: #777;
+    background: #ebebeb;
+}
+#p {
+    color: #777;
+    background: #ebebeb;
 }
