--- a/style.css
+++ b/style.css
@@ -1,75 +1,83 @@
-.full-l {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 20px;
-    background: #777;
-    background: #ebebeb;
-    width: 960px;
-    height: 50px;
-    text-align: center;
-}
-.footer {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 20px;
-    background: #777;
-    background: #ebebeb;
-    width: 960px;
-    height: 50px;
-    text-align: center;
-    clear: both;
-}
+
 body {
     font-size: 18px;
     width: 960px;
     background: #777;
     color: #777;
-    margin-left: 200px;
+    margin-left:15%;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background: '#777'
 }
-
+.full-l {
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: #777;
+    background: #ebebeb;
+    text-align: center;
+    padding-top: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 40px;
+}
 section {
     float: left;
+    box-sizing: border-box;
     width: 495px;
     height: 275px;
     background: #ebebeb;
-    margin-bottom: 20px;
     text-align: center;
     margin-top: 15px;
-    margin-right:0px;
-
-
-}
-aside {
-    background: #ebebeb;
-    float: right;
-    width: 200px;
-    height: 275px;
-    text-align: center;
-    margin-top: 15px;
-
+    margin-right: 0px;
+    padding-top: 40px;
 }
 
 article {
+    box-sizing: border-box;
+    padding: 20px;
     color: #ebebeb;
     background: #777;
-    width: 455px;
-    height: 175px;
+    width: 475px;
+    height: 185px;
     margin-left: 10px;
     margin-right: 0px;
-    padding: 10px;
-    margin-top: 50px;
-    margin-bottom: 5px;
+    margin-top: 20px;
     text-align: center;
-  
-
 }
 #h1 {
+    margin-top: 10px;
+    padding: 10px;
     color: #777;
     background: #ebebeb;
 }
 #p {
     color: #777;
     background: #ebebeb;
+}
+aside {
+    background: #ebebeb;
+    color: #777;
+    box-sizing: border-box;
+    padding: 40px;
+    float: right;
+    width: 440px;
+    height: 275px;
+    text-align: center;
+    margin-top: 15px;
+    margin-left: 7px;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
+.footer {
+    clear: both;
+    box-sizing: border-box;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 40px;
+    background: #777;
+    background: #ebebeb;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+  
 }
