--- a/style.css
+++ b/style.css
@@ -46,13 +46,19 @@ article {
 }
 #h1 {
     margin-top: 10px;
-    padding: 10px;
+    padding: 5px;
     color: #777;
     background: #ebebeb;
+    width: 98%;
+    height: 30%;
 }
 #p {
     color: #777;
     background: #ebebeb;
+    width: 98%;
+    height: 30%;
+    padding: 5px;
+    margin-top: 10px;
 }
 aside {
     background: #ebebeb;
